# kartoffels

./: .gitignore  BUILDING.md  Cargo.toml  Justfile  README.md  flake.nix
app/: .gitignore  Cargo.toml  default.nix  riscv32-kartoffel-bot.json  rust-toolchain.toml
app/.cargo/: config.toml
app/crates/kartoffel/: Cargo.toml  build.rs
app/crates/kartoffel/src/: allocator.rs  arm.rs  battery.rs  bluetooth.rs  clock.rs  compass.rs  irq.rs  lib.rs  motor.rs  panic.rs  radar.rs  radio.rs  serial.rs  timer.rs
app/crates/kartoffels-bots/: README.md
app/crates/kartoffels-bots/src/: lib.rs
app/crates/kartoffels-cpu/: Cargo.toml
app/crates/kartoffels-cpu-tests/: Cargo.toml
app/crates/kartoffels-cpu-tests/src/: lib.rs  op-add.rs  op-addi.rs  op-amoaddw.rs  op-amoandw.rs  op-amomaxud.rs  op-amomaxuw.rs  op-amomaxw.rs  op-amominud.rs  op-amominuw.rs  op-amominw.rs  op-amoorw.rs  op-amoswapw.rs  op-amoxorw.rs  op-and.rs  op-andi.rs  op-atomic-mmio.rs  op-beq.rs  op-bge.rs  op-bgeu.rs  op-blt.rs  op-bltu.rs  op-bne.rs  op-div.rs  op-divu.rs  op-divuw.rs  op-divw.rs  op-jal.rs  op-jalr.rs  op-lb-sb.rs  op-lh-mmio.rs  op-lh-sh.rs  op-lrw-scw.rs  op-lui.rs  op-lw-mmio-unaligned.rs  op-lw-null.rs  op-lw-sw-mmio.rs  op-lw-sw.rs  op-mul.rs  op-mulh.rs  (+33 more)
app/crates/kartoffels-cpu/benches/: bench.rs
app/crates/kartoffels-cpu/src/: error.rs  firmware.rs  fw.rs  lib.rs  mem.rs  mmio.rs  tick.rs
app/crates/kartoffels-cpu/tests/: acc.rs  acceptance.rs
app/crates/kartoffels-front/: Cargo.toml
app/crates/kartoffels-front/src/: frame.rs  framework.rs  lib.rs  theme.rs  ui.rs  utils.rs  widgets.rs
app/crates/kartoffels-frontend/: Cargo.toml
app/crates/kartoffels-frontend/src/: lib.rs  utils.rs  views.rs
app/crates/kartoffels-prefabs/: Cargo.toml  README.md  build.rs
app/crates/kartoffels-prefabs/src/: acc-breakpoint.rs  acc-fall.rs  acc-irq.rs  acc-panic.rs  acc-radar.rs  acc-serial.rs  chl-acyclic-maze.rs  chl-diamond-heist-guard.rs  chl-diamond-heist.rs  chl-personal-roomba.rs  coronabeth.rs  dummy.rs  ianthe.rs  lib.rs  roberto.rs  tut-01.rs  tut-02.rs  tut-03.rs  tut-04.rs
app/crates/kartoffels-server/: Cargo.toml
app/crates/kartoffels-server/src/: admin.rs  common.rs  http.rs  lib.rs  ssh.rs
app/crates/kartoffels-session/: Cargo.toml
app/crates/kartoffels-session/src/: lib.rs
app/crates/kartoffels-store/: Cargo.toml
app/crates/kartoffels-store/src/: lib.rs  secret.rs  session.rs  sessions.rs  world.rs  worlds.rs
app/crates/kartoffels-toolbox/: Cargo.toml
app/crates/kartoffels-toolbox/src/: cmds.rs  lib.rs
app/crates/kartoffels-ui/src/: abort.rs  compat.rs  lib.rs  render.rs  term.rs  theme.rs  ui.rs  utils.rs  widgets.rs
app/crates/kartoffels-utils/: Cargo.toml
app/crates/kartoffels-utils/src/: arc_swap_ext.rs  asserter.rs  cbor_map_ext.rs  cbor_transcoding.rs  cbor_value_ext.rs  error_ext.rs  id.rs  lib.rs  serde.rs
app/crates/kartoffels-world/: Cargo.toml
app/crates/kartoffels-world/src/: bot.rs  bots.rs  clock.rs  config.rs  events.rs  handle.rs  lib.rs  lifecycle.rs  lives.rs  map.rs  messages.rs  object.rs  objects.rs  policy.rs  snapshots.rs  spec.rs  stats.rs  storage.rs  store.rs  theme.rs  utils.rs
app/crates/kartoffels-world/tests/: acc.rs  acceptance.rs
app/nix/patches/: russh-cryptovec-mlock.patch
app/tests/: acc.rs  acceptance.rs
app/tests/acc/: admin.rs  challenges.rs  console.rs  game.rs  index.rs  tutorial.rs
app/tests/acceptance/: challenges.rs  game.rs  tutorial.rs
backend/: .gitignore  Cargo.toml  Justfile  dbg  default.nix  rust-toolchain.toml  srv
backend/.cargo/: config.toml
backend/bots/chl-acyclic-maze/: Cargo.toml
backend/bots/chl-acyclic-maze/src/: main.rs
backend/bots/chl-flight-syndrome-enemy/: Cargo.toml
backend/bots/chl-flight-syndrome-enemy/src/: main.rs
backend/bots/dummy/: Cargo.toml
backend/bots/roberto/: Cargo.toml
backend/bots/tut-01/: Cargo.toml
backend/bots/tut-02/: Cargo.toml
backend/bots/tut-03/: Cargo.toml
backend/bots/tut-04/: Cargo.toml
backend/crates/bot-dummy/: Cargo.toml
backend/crates/bot-roberto/: Cargo.toml
backend/crates/hellbots/: Cargo.toml
backend/crates/hellbots-pac/: Cargo.toml
backend/crates/hellbots-roberto/: Cargo.toml
backend/crates/hellbots-server/: Cargo.toml  logo.txt
backend/crates/hellbots-vm/: Cargo.toml
backend/crates/hellbots-vm-tests/: Cargo.toml
backend/crates/kartoffel/: Cargo.toml  build.rs  kartoffel.ld
backend/crates/kartoffel-roberto/: Cargo.toml
backend/crates/kartoffels/: Cargo.toml
backend/crates/kartoffels-app/: Cargo.toml
backend/crates/kartoffels-bots/: Cargo.toml  build.rs
backend/crates/kartoffels-cpu/: Cargo.toml
backend/crates/kartoffels-cpu-tests/: Cargo.toml
backend/crates/kartoffels-dbg/: Cargo.toml
backend/crates/kartoffels-game/: Cargo.toml
backend/crates/kartoffels-pac/: Cargo.toml
backend/crates/kartoffels-roberto/: Cargo.toml
backend/crates/kartoffels-sandbox/: Cargo.toml  README.md
backend/crates/kartoffels-server/: Cargo.toml  logo.txt
backend/crates/kartoffels-session/: Cargo.toml
backend/crates/kartoffels-store/: Cargo.toml
backend/crates/kartoffels-toolbox/: Cargo.toml
backend/crates/kartoffels-ui/: Cargo.toml
backend/crates/kartoffels-utils/: Cargo.toml
backend/crates/kartoffels-vm/: Cargo.toml
backend/crates/kartoffels-vm-tests/: Cargo.toml
backend/crates/kartoffels-world/: Cargo.toml
backend/crates/roberto/: Cargo.toml  README.md
backend/misc/: riscv64-kartoffel-bot.ld  riscv64-unknown-bot.ld
backend/nix/patches/: russh-cryptovec-mlock.patch
backend/src/: main.rs
backend/tests/: acc.rs  acceptance.rs
backend/tests/acc/: challenges.rs  home.rs  tutorial.rs
backend/tests/acceptance/: challenges.rs  game.rs  home.rs  index.rs  tutorial.rs
crates/kartoffels-game/: Cargo.toml
crates/kartoffels-game/src/: driver.rs  lib.rs  views.rs
crates/kartoffels-world/: Cargo.toml
crates/kartoffels-world/src/: bot.rs  conns.rs  events.rs  handle.rs  lib.rs  map.rs  policy.rs  snapshots.rs  stats.rs  store.rs  updates.rs  utils.rs
(+1391 files in other folders)
