[workspace]
resolver = "2"

members = [
    "crates/kartoffel",
    "crates/kartoffels-cpu",
    "crates/kartoffels-cpu-tests",
    "crates/kartoffels-front",
    "crates/kartoffels-prefabs",
    "crates/kartoffels-server",
    "crates/kartoffels-store",
    "crates/kartoffels-toolbox",
    "crates/kartoffels-utils",
    "crates/kartoffels-world",
]

[workspace.package]
version = "0.7.0"
edition = "2024"
authors = ["Patryk Wychowaniec <pwychowaniec@pm.me>"]

[workspace.dependencies]
ahash = { version = "0.8.11", features = ["serde"] }
anyhow = "1.0.82"
arc-swap = "1.7.1"
avt = "0.15.1"
axum = { version = "0.8.4", features = ["macros", "ws"] }
base64 = "0.22.1"
bytes = "1.10.1"
chrono = { version = "0.4.38", features = ["serde"] }
ciborium = "0.2.2"
clap = { version = "4.5.4", features = ["derive"] }
derivative = "2.2.0"
flate2 = "1.0.35"
futures = "0.3.30"
futures-util = "0.3.30"
glam = { version = "0.30.3", default-features = false }
indoc = "2.0.5"
itertools = "0.14.0"
maybe-owned = { version = "0.3.4", features = ["serde"] }
num-traits = { version = "0.2.19", default-features = false }
object = { version = "0.36.7", default-features = false, features = ["build", "compression", "elf", "read", "std", "write"] }
ordinal = "0.4.0"
parking_lot = "0.12.3"
pretty_assertions = "1.4.0"
prettytable-rs = "0.10.0"
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
ratatui = { version = "0.30.0-alpha.3", default-features = false, features = ["crossterm", "layout-cache", "palette", "unstable-backend-writer", "unstable-rendered-line-info"] }
reqwest = { version = "0.12.8", default-features = false }
russh = "0.52.0"
serde = { version = "1.0.200", features = ["derive", "rc"] }
serde_bytes = "0.11.14"
serde_json = "1.0.117"
sha256 = "1.5.0"
shellwords = "1.1.0"
spin = "0.10.0"
talc = "4.4.1"
tempfile = "3.15.0"
termwiz = "0.23.0"
test-case = "3.3.1"
thiserror = "2.0.12"
tokio = { version = "1.37.0", features = ["full", "test-util"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tokio-tungstenite = "0.26.2"
tokio-util = "0.7.11"
tower-http = { version = "0.6.4", features = ["auth", "cors", "trace", "validate-request"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tungstenite = "0.26.2"

[workspace.lints.clippy]
use_self = "warn"

# ---

[package]
name = "kartoffels"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
kartoffels-server = { path = "./crates/kartoffels-server" }
kartoffels-toolbox = { path = "./crates/kartoffels-toolbox" }

[dev-dependencies]
avt.workspace = true
base64.workspace = true
flate2.workspace = true
futures-util.workspace = true
kartoffels-prefabs = { path = "./crates/kartoffels-prefabs" }
kartoffels-store = { path = "./crates/kartoffels-store" }
kartoffels-utils = { path = "./crates/kartoffels-utils" }
kartoffels-world = { path = "./crates/kartoffels-world" }
reqwest.workspace = true
russh.workspace = true
termwiz.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tungstenite.workspace = true

# ---

[profile.dist]
inherits = "release"
lto = true
