[workspace]
resolver = "2"

members = [
    "crates/kartoffel",
    "crates/kartoffels",
    "crates/kartoffels-dbg",
    "crates/kartoffels-sandbox",
    "crates/kartoffels-server",
    "crates/kartoffels-vm",
    "crates/kartoffels-vm-tests",
    "crates/roberto",
]

[workspace.package]
version = "0.2.0"
edition = "2021"

[workspace.metadata.crane]
name = "kartoffels-backend"

[workspace.dependencies]
ahash = { version = "0.8.11", features = ["serde"] }
anyhow = "1.0.82"
axum = { version = "0.7.5", features = ["macros", "ws"] }
chrono = { version = "0.4.38", features = ["serde"] }
ciborium = "0.2.2"
clap = { version = "4.5.4", features = ["derive"] }
console_error_panic_hook = "0.1.7"
derivative = "2.2.0"
elf = "0.7.4"
futures = "0.3.30"
futures-util = "0.3.30"
getrandom = { version = "0.2", features = ["js"] }
glam = { version = "0.27.0", features = ["serde"] }
indoc = "2.0.5"
itertools = "0.12.1"
js-sys = "0.3.69"
lru = "0.12.3"
maybe-owned = { version = "0.3.4", features = ["serde"] }
num-traits = { version = "0.2.19", default-features = false }
pretty_assertions = "1.4.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"
serde = { version = "1.0.200", features = ["derive", "rc"] }
serde-wasm-bindgen = "0.6.5"
serde_bytes = "0.11.14"
serde_json = "1.0.117"
spin = "0.9.8"
talc = "4.4.1"
test-case = "3.3.1"
tokio = { version = "1.37.0", default-features = false, features = ["rt", "sync"] }
tokio-stream = "0.1.15"
tower-http = { version = "0.5.2", features = ["auth", "cors", "trace", "validate-request"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = { version = "0.4.42", features = ["futures-core-03-stream"] }
wasm-streams = "0.4.0"
web-sys = { version = "0.3.69", features = ["Window"] }
web-time = "1.1.0"
