[workspace]
resolver = "2"

members = [
    "crates/kartoffel",
    "crates/kartoffels-bots",
    "crates/kartoffels-cpu",
    "crates/kartoffels-cpu-tests",
    "crates/kartoffels-server",
    "crates/kartoffels-session",
    "crates/kartoffels-store",
    "crates/kartoffels-toolbox",
    "crates/kartoffels-ui",
    "crates/kartoffels-utils",
    "crates/kartoffels-world",
]

[workspace.package]
version = "0.5.0"
edition = "2021"

[workspace.dependencies]
ahash = { version = "0.8.11", features = ["serde"] }
anyhow = "1.0.82"
avt = "0.14.0"
axum = { version = "0.7.5", features = ["macros", "ws"] }
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
ciborium = "0.2.2"
clap = { version = "4.5.4", features = ["derive"] }
derivative = "2.2.0"
ed25519-dalek = "*"
elf = "0.7.4"
flate2 = "1.0.35"
futures = "0.3.30"
futures-util = { version = "0.3.30", features = ["sink"] }
glam = { version = "0.29.2", default-features = false }
indoc = "2.0.5"
itertools = "0.12.1"
maybe-owned = { version = "0.3.4", features = ["serde"] }
num-traits = { version = "0.2.19", default-features = false }
ordinal = "0.3.2"
pretty_assertions = "1.4.0"
prettytable-rs = "0.10.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"
ratatui = { git = "https://github.com/ratatui/ratatui", features = ["unstable-backend-writer", "unstable-rendered-line-info", "unstable-widget-ref"] }
reqwest = { version = "0.12.8", default-features = false }
russh = "0.45.0"
russh-keys = "0.45.0"
serde = { version = "1.0.200", features = ["derive", "rc"] }
serde_bytes = "0.11.14"
serde_json = "1.0.117"
sha256 = "1.5.0"
spin = "0.9.8"
talc = "4.4.1"
termwiz = "0.22.0"
test-case = "3.3.1"
tokio = { version = "1.37.0", features = ["full", "test-util"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tokio-tungstenite = "0.21.0"
tokio-util = "0.7.11"
tower-http = { version = "0.5.2", features = ["auth", "cors", "trace", "validate-request"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tungstenite = "0.21.0"

# ---

[package]
name = "kartoffels"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
kartoffels-server = { path = "./crates/kartoffels-server" }
kartoffels-toolbox = { path = "./crates/kartoffels-toolbox" }

[dev-dependencies]
avt.workspace = true
base64.workspace = true
flate2.workspace = true
futures-util.workspace = true
kartoffels-bots = { path = "./crates/kartoffels-bots" }
kartoffels-store = { path = "./crates/kartoffels-store" }
kartoffels-world = { path = "./crates/kartoffels-world" }
reqwest.workspace = true
termwiz.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tungstenite.workspace = true

# ---

[profile.dist]
inherits = "release"
lto = true
