[package]
name = "kartoffels-world"
version.workspace = true
edition.workspace = true

[dependencies]
kartoffels-utils = { path = "../kartoffels-utils" }
kartoffels-vm = { path = "../kartoffels-vm" }

ahash.workspace = true
anyhow.workspace = true
chrono.workspace = true
ciborium.workspace = true
derivative.workspace = true
futures-util.workspace = true
glam.workspace = true
lru.workspace = true
maybe-owned.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

[dev-dependencies]
indoc.workspace = true
itertools.workspace = true
pretty_assertions.workspace = true
rand_chacha.workspace = true
test-case.workspace = true
