[package]
name = "kartoffel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "MIT"
description = "Building blocks for a kartoffel bot"
repository = "https://github.com/Patryk27/kartoffels"
keywords = ["firmware", "kartoffel", "kartoffels", "riscv"]

[features]
default = ["serial-panic"]

# If firmware crashes, print panic message to the serial port; this makes the
# firmware heavier, but also easier to debug.
serial-panic = []

[dependencies]
spin.workspace = true
talc.workspace = true
