bin = [
    { name = "op-add", path = "src/op-add.rs", test = false },
    { name = "op-addi", path = "src/op-addi.rs", test = false },
    { name = "op-amoaddw", path = "src/op-amoaddw.rs", test = false },
    { name = "op-amoandw", path = "src/op-amoandw.rs", test = false },
    { name = "op-amomaxuw", path = "src/op-amomaxuw.rs", test = false },
    { name = "op-amomaxw", path = "src/op-amomaxw.rs", test = false },
    { name = "op-amominuw", path = "src/op-amominuw.rs", test = false },
    { name = "op-amominw", path = "src/op-amominw.rs", test = false },
    { name = "op-amoorw", path = "src/op-amoorw.rs", test = false },
    { name = "op-amoswapw", path = "src/op-amoswapw.rs", test = false },
    { name = "op-amoxorw", path = "src/op-amoxorw.rs", test = false },
    { name = "op-and", path = "src/op-and.rs", test = false },
    { name = "op-andi", path = "src/op-andi.rs", test = false },
    { name = "op-atomic-mmio", path = "src/op-atomic-mmio.rs", test = false },
    { name = "op-beq", path = "src/op-beq.rs", test = false },
    { name = "op-bge", path = "src/op-bge.rs", test = false },
    { name = "op-bgeu", path = "src/op-bgeu.rs", test = false },
    { name = "op-blt", path = "src/op-blt.rs", test = false },
    { name = "op-bltu", path = "src/op-bltu.rs", test = false },
    { name = "op-bne", path = "src/op-bne.rs", test = false },
    { name = "op-div", path = "src/op-div.rs", test = false },
    { name = "op-divu", path = "src/op-divu.rs", test = false },
    { name = "op-jal", path = "src/op-jal.rs", test = false },
    { name = "op-jalr", path = "src/op-jalr.rs", test = false },
    { name = "op-lb-sb", path = "src/op-lb-sb.rs", test = false },
    { name = "op-lh-mmio", path = "src/op-lh-mmio.rs", test = false },
    { name = "op-lh-sh", path = "src/op-lh-sh.rs", test = false },
    { name = "op-lui", path = "src/op-lui.rs", test = false },
    { name = "op-lw-mmio-unaligned", path = "src/op-lw-mmio-unaligned.rs", test = false },
    { name = "op-lw-null", path = "src/op-lw-null.rs", test = false },
    { name = "op-lw-sw", path = "src/op-lw-sw.rs", test = false },
    { name = "op-lw-sw-mmio", path = "src/op-lw-sw-mmio.rs", test = false },
    { name = "op-mul", path = "src/op-mul.rs", test = false },
    { name = "op-mulh", path = "src/op-mulh.rs", test = false },
    { name = "op-mulhsu", path = "src/op-mulhsu.rs", test = false },
    { name = "op-mulhu", path = "src/op-mulhu.rs", test = false },
    { name = "op-or", path = "src/op-or.rs", test = false },
    { name = "op-ori", path = "src/op-ori.rs", test = false },
    { name = "op-rem", path = "src/op-rem.rs", test = false },
    { name = "op-remu", path = "src/op-remu.rs", test = false },
    { name = "op-sh-mmio", path = "src/op-sh-mmio.rs", test = false },
    { name = "op-sll", path = "src/op-sll.rs", test = false },
    { name = "op-slli", path = "src/op-slli.rs", test = false },
    { name = "op-slt", path = "src/op-slt.rs", test = false },
    { name = "op-slti", path = "src/op-slti.rs", test = false },
    { name = "op-sltiu", path = "src/op-sltiu.rs", test = false },
    { name = "op-sltu", path = "src/op-sltu.rs", test = false },
    { name = "op-sra", path = "src/op-sra.rs", test = false },
    { name = "op-srai", path = "src/op-srai.rs", test = false },
    { name = "op-srl", path = "src/op-srl.rs", test = false },
    { name = "op-srli", path = "src/op-srli.rs", test = false },
    { name = "op-sub", path = "src/op-sub.rs", test = false },
    { name = "op-sw-mmio-unaligned", path = "src/op-sw-mmio-unaligned.rs", test = false },
    { name = "op-sw-null", path = "src/op-sw-null.rs", test = false },
    { name = "op-xor", path = "src/op-xor.rs", test = false },
    { name = "op-xori", path = "src/op-xori.rs", test = false },
    { name = "ps-neg", path = "src/ps-neg.rs", test = false },
    { name = "ps-not", path = "src/ps-not.rs", test = false },
    { name = "xx-floats", path = "src/xx-floats.rs", test = false },
    { name = "xx-ints", path = "src/xx-ints.rs", test = false },
    { name = "xx-map", path = "src/xx-map.rs", test = false },
    { name = "xx-vec", path = "src/xx-vec.rs", test = false },
]

[package]
name = "kartoffels-cpu-tests"
version.workspace = true
edition.workspace = true

[dependencies]
kartoffel = { path = "../kartoffel" }
num-traits.workspace = true
rand.workspace = true
rand_chacha.workspace = true
spin.workspace = true
talc.workspace = true
