[package]
name = "kartoffels-front"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
futures-util.workspace = true
futures.workspace = true
glam.workspace = true
indoc.workspace = true
itertools.workspace = true
kartoffels-prefabs = { path = "../kartoffels-prefabs" }
kartoffels-store = { path = "../kartoffels-store" }
kartoffels-utils = { path = "../kartoffels-utils" }
kartoffels-world = { path = "../kartoffels-world" }
ordinal.workspace = true
rand.workspace = true
rand_chacha.workspace = true
ratatui.workspace = true
termwiz.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tracing.workspace = true
