[package]
name = "kartoffels-frontend"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
futures-util.workspace = true
futures.workspace = true
glam.workspace = true
indoc.workspace = true
itertools.workspace = true
kartoffels-prefabs = { path = "../kartoffels-prefabs" }
kartoffels-store = { path = "../kartoffels-store" }
kartoffels-ui = { path = "../kartoffels-ui" }
kartoffels-utils = { path = "../kartoffels-utils" }
kartoffels-world = { path = "../kartoffels-world" }
ordinal.workspace = true
rand.workspace = true
rand_chacha.workspace = true
ratatui.workspace = true
shellwords.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tracing.workspace = true
