bin = [
    { name = "chl-acyclic-maze", path = "src/chl-acyclic-maze.rs", test = false },
    { name = "chl-diamond-heist", path = "src/chl-diamond-heist.rs", test = false },
    { name = "chl-diamond-heist-guard", path = "src/chl-diamond-heist-guard.rs", test = false },
    { name = "chl-personal-roomba", path = "src/chl-personal-roomba.rs", test = false },
    { name = "dummy", path = "src/dummy.rs", test = false },
    { name = "roberto", path = "src/roberto.rs", test = false },
    { name = "tut-01", path = "src/tut-01.rs", test = false },
    { name = "tut-02", path = "src/tut-02.rs", test = false },
    { name = "tut-03", path = "src/tut-03.rs", test = false },
    { name = "tut-04", path = "src/tut-04.rs", test = false },
]

[package]
name = "kartoffels-prefabs"
version.workspace = true
edition.workspace = true

[dependencies]
glam = { workspace = true, features = ["libm"] }
kartoffel = { path = "../../crates/kartoffel" }
