[package]
name = "kartoffels-server"
version.workspace = true
edition.workspace = true

[dependencies]
ahash.workspace = true
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
flate2.workspace = true
futures-util.workspace = true
glam.workspace = true
indoc.workspace = true
itertools.workspace = true
kartoffels-frontend = { path = "../kartoffels-frontend" }
kartoffels-store = { path = "../kartoffels-store" }
kartoffels-ui = { path = "../kartoffels-ui" }
kartoffels-world = { path = "../kartoffels-world" }
rand.workspace = true
russh.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
