[package]
name = "kartoffels-store"
version.workspace = true
edition.workspace = true

[dependencies]
ahash.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
derivative.workspace = true
itertools.workspace = true
kartoffels-utils = { path = "../kartoffels-utils" }
kartoffels-world = { path = "../kartoffels-world" }
rand.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
