[package]
name = "kartoffels-store"
version.workspace = true
edition.workspace = true

[dependencies]
ahash.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
derivative.workspace = true
itertools.workspace = true
kartoffels-utils = { path = "../kartoffels-utils" }
kartoffels-world = { path = "../kartoffels-world" }
rand = { workspace = true, features = ["std", "std_rng"] }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
rand_chacha.workspace = true
