[package]
name = "kartoffels-store"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
chrono.workspace = true
derivative.workspace = true
futures-util.workspace = true
itertools.workspace = true
kartoffels-utils = { path = "../kartoffels-utils" }
kartoffels-world = { path = "../kartoffels-world" }
parking_lot.workspace = true
rand = { workspace = true, features = ["std", "std_rng"] }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
