[package]
name = "kartoffels-toolbox"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
ciborium.workspace = true
clap.workspace = true
kartoffels-utils = { path = "../kartoffels-utils" }
kartoffels-world = { path = "../kartoffels-world" }
rand.workspace = true
serde_json.workspace = true
tokio.workspace = true
