[package]
name = "kartoffels-world"
version.workspace = true
edition.workspace = true

[dependencies]
ahash.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
chrono.workspace = true
ciborium.workspace = true
derivative.workspace = true
futures-util.workspace = true
glam = { workspace = true, features = ["serde"] }
itertools.workspace = true
kartoffel = { path = "../kartoffel" }
kartoffels-cpu = { path = "../kartoffels-cpu" }
kartoffels-utils = { path = "../kartoffels-utils" }
maybe-owned.workspace = true
prettytable-rs.workspace = true
rand = { workspace = true, features = ["std"] }
rand_chacha = { workspace = true, features = ["serde1"] }
serde.workspace = true
serde_json.workspace = true
sha256.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
indoc.workspace = true
itertools.workspace = true
kartoffels-prefabs = { path = "../kartoffels-prefabs" }
pretty_assertions.workspace = true
test-case.workspace = true

[lints]
workspace = true
