[package]
name = "hellbots-server"
version = "0.1.0"
edition = "2021"
default-run = "hellbots-server"

[dependencies]
hellbots = { path = "../hellbots" }

anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
glam = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
