[package]
name = "hellbots"
version = "0.1.0"
edition = "2021"

[dependencies]
hellbots-vm = { path = "../hellbots-vm" }

anyhow = { workspace = true }
ciborium = { workspace = true }
derivative = { workspace = true }
futures-util = { workspace = true }
glam = { workspace = true }
itertools = { workspace = true }
maybe-owned = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
pretty_assertions = { workspace = true }
rand_chacha = { workspace = true }
test-case = { workspace = true }
