bin = [
    { name = "op-add", path = "src/op-add.rs" },
    { name = "op-addi", path = "src/op-addi.rs" },
    { name = "op-addiw", path = "src/op-addiw.rs" },
    { name = "op-addw", path = "src/op-addw.rs" },
    { name = "op-amoaddw", path = "src/op-amoaddw.rs" },
    { name = "op-amoandw", path = "src/op-amoandw.rs" },
    { name = "op-amomaxuw", path = "src/op-amomaxuw.rs" },
    { name = "op-amomaxw", path = "src/op-amomaxw.rs" },
    { name = "op-amominuw", path = "src/op-amominuw.rs" },
    { name = "op-amominw", path = "src/op-amominw.rs" },
    { name = "op-amoorw", path = "src/op-amoorw.rs" },
    { name = "op-amoswapw", path = "src/op-amoswapw.rs" },
    { name = "op-amoxorw", path = "src/op-amoxorw.rs" },
    { name = "op-and", path = "src/op-and.rs" },
    { name = "op-andi", path = "src/op-andi.rs" },
    { name = "op-atomic-mmio", path = "src/op-atomic-mmio.rs" },
    { name = "op-beq", path = "src/op-beq.rs" },
    { name = "op-bge", path = "src/op-bge.rs" },
    { name = "op-bgeu", path = "src/op-bgeu.rs" },
    { name = "op-blt", path = "src/op-blt.rs" },
    { name = "op-bltu", path = "src/op-bltu.rs" },
    { name = "op-bne", path = "src/op-bne.rs" },
    { name = "op-div", path = "src/op-div.rs" },
    { name = "op-divu", path = "src/op-divu.rs" },
    { name = "op-divuw", path = "src/op-divuw.rs" },
    { name = "op-divw", path = "src/op-divw.rs" },
    { name = "op-jal", path = "src/op-jal.rs" },
    { name = "op-jalr", path = "src/op-jalr.rs" },
    { name = "op-lb-sb", path = "src/op-lb-sb.rs" },
    { name = "op-ld-sd", path = "src/op-ld-sd.rs" },
    { name = "op-lh-mmio", path = "src/op-lh-mmio.rs" },
    { name = "op-lh-sh", path = "src/op-lh-sh.rs" },
    { name = "op-lrw-scw", path = "src/op-lrw-scw.rs" },
    { name = "op-lui", path = "src/op-lui.rs" },
    { name = "op-lw-mmio-unaligned", path = "src/op-lw-mmio-unaligned.rs" },
    { name = "op-lw-null", path = "src/op-lw-null.rs" },
    { name = "op-lw-sw", path = "src/op-lw-sw.rs" },
    { name = "op-lw-sw-mmio", path = "src/op-lw-sw-mmio.rs" },
    { name = "op-mul", path = "src/op-mul.rs" },
    { name = "op-mulh", path = "src/op-mulh.rs" },
    { name = "op-mulhsu", path = "src/op-mulhsu.rs" },
    { name = "op-mulhu", path = "src/op-mulhu.rs" },
    { name = "op-mulw", path = "src/op-mulw.rs" },
    { name = "op-or", path = "src/op-or.rs" },
    { name = "op-ori", path = "src/op-ori.rs" },
    { name = "op-rem", path = "src/op-rem.rs" },
    { name = "op-remu", path = "src/op-remu.rs" },
    { name = "op-remuw", path = "src/op-remuw.rs" },
    { name = "op-remw", path = "src/op-remw.rs" },
    { name = "op-sh-mmio", path = "src/op-sh-mmio.rs" },
    { name = "op-sll", path = "src/op-sll.rs" },
    { name = "op-slli", path = "src/op-slli.rs" },
    { name = "op-slliw", path = "src/op-slliw.rs" },
    { name = "op-sllw", path = "src/op-sllw.rs" },
    { name = "op-slt", path = "src/op-slt.rs" },
    { name = "op-slti", path = "src/op-slti.rs" },
    { name = "op-sltiu", path = "src/op-sltiu.rs" },
    { name = "op-sltu", path = "src/op-sltu.rs" },
    { name = "op-sra", path = "src/op-sra.rs" },
    { name = "op-srai", path = "src/op-srai.rs" },
    { name = "op-sraiw", path = "src/op-sraiw.rs" },
    { name = "op-sraw", path = "src/op-sraw.rs" },
    { name = "op-srl", path = "src/op-srl.rs" },
    { name = "op-srli", path = "src/op-srli.rs" },
    { name = "op-srliw", path = "src/op-srliw.rs" },
    { name = "op-srlw", path = "src/op-srlw.rs" },
    { name = "op-sub", path = "src/op-sub.rs" },
    { name = "op-subw", path = "src/op-subw.rs" },
    { name = "op-sw-mmio-unaligned", path = "src/op-sw-mmio-unaligned.rs" },
    { name = "op-sw-null", path = "src/op-sw-null.rs" },
    { name = "op-xor", path = "src/op-xor.rs" },
    { name = "op-xori", path = "src/op-xori.rs" },
    { name = "ps-neg", path = "src/ps-neg.rs" },
    { name = "ps-not", path = "src/ps-not.rs" },
    { name = "ps-sextw", path = "src/ps-sextw.rs" },
    { name = "xx-floats", path = "src/xx-floats.rs" },
    { name = "xx-ints", path = "src/xx-ints.rs" },
    { name = "xx-map", path = "src/xx-map.rs" },
    { name = "xx-vec", path = "src/xx-vec.rs" },
]

[package]
name = "kartoffels-cpu-tests"
version.workspace = true
edition.workspace = true

[dependencies]
kartoffel = { path = "../kartoffel" }
num-traits.workspace = true
rand.workspace = true
rand_chacha.workspace = true
spin.workspace = true
talc.workspace = true
