[package]
name = "kartoffels-server"
version = { workspace = true }
edition = { workspace = true }
default-run = "kartoffels-server"

[dependencies]
kartoffels = { path = "../kartoffels" }

anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
glam = { workspace = true }
indoc = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
