[package]
name = "kartoffels-server"
version.workspace = true
edition.workspace = true

[dependencies]
kartoffels-game = { path = "../kartoffels-game" }
kartoffels-store = { path = "../kartoffels-store" }
kartoffels-ui = { path = "../kartoffels-ui" }
kartoffels-world = { path = "../kartoffels-world" }

ahash.workspace = true
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
futures-util.workspace = true
glam.workspace = true
indoc.workspace = true
itertools.workspace = true
rand.workspace = true
russh-keys.workspace = true
russh.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
