bin = [
    { name = "op-add", path = "src/op-add.rs" },
    { name = "op-addi", path = "src/op-addi.rs" },
    { name = "op-addiw", path = "src/op-addiw.rs" },
    { name = "op-addw", path = "src/op-addw.rs" },
    { name = "op-amoaddw", path = "src/op-amoaddw.rs" },
    { name = "op-amoandw", path = "src/op-amoandw.rs" },
    { name = "op-amoorw", path = "src/op-amoorw.rs" },
    { name = "op-and", path = "src/op-and.rs" },
    { name = "op-andi", path = "src/op-andi.rs" },
    { name = "op-beq", path = "src/op-beq.rs" },
    { name = "op-bge", path = "src/op-bge.rs" },
    { name = "op-bgeu", path = "src/op-bgeu.rs" },
    { name = "op-blt", path = "src/op-blt.rs" },
    { name = "op-bltu", path = "src/op-bltu.rs" },
    { name = "op-bne", path = "src/op-bne.rs" },
    { name = "op-div", path = "src/op-div.rs" },
    { name = "op-divu", path = "src/op-divu.rs" },
    { name = "op-jal", path = "src/op-jal.rs" },
    { name = "op-jalr", path = "src/op-jalr.rs" },
    { name = "op-lb-sb", path = "src/op-lb-sb.rs" },
    { name = "op-ld-sd", path = "src/op-ld-sd.rs" },
    { name = "op-lh-sh", path = "src/op-lh-sh.rs" },
    { name = "op-lui", path = "src/op-lui.rs" },
    { name = "op-lw-sw", path = "src/op-lw-sw.rs" },
    { name = "op-mmio", path = "src/op-mmio.rs" },
    { name = "op-mul", path = "src/op-mul.rs" },
    { name = "op-mulh", path = "src/op-mulh.rs" },
    { name = "op-or", path = "src/op-or.rs" },
    { name = "op-ori", path = "src/op-ori.rs" },
    { name = "op-rem", path = "src/op-rem.rs" },
    { name = "op-remu", path = "src/op-remu.rs" },
    { name = "op-sll", path = "src/op-sll.rs" },
    { name = "op-slli", path = "src/op-slli.rs" },
    { name = "op-slt", path = "src/op-slt.rs" },
    { name = "op-slti", path = "src/op-slti.rs" },
    { name = "op-sltiu", path = "src/op-sltiu.rs" },
    { name = "op-sltu", path = "src/op-sltu.rs" },
    { name = "op-sra", path = "src/op-sra.rs" },
    { name = "op-srai", path = "src/op-srai.rs" },
    { name = "op-sraiw", path = "src/op-sraiw.rs" },
    { name = "op-srl", path = "src/op-srl.rs" },
    { name = "op-srli", path = "src/op-srli.rs" },
    { name = "op-srliw", path = "src/op-srliw.rs" },
    { name = "op-sub", path = "src/op-sub.rs" },
    { name = "op-xor", path = "src/op-xor.rs" },
    { name = "op-xori", path = "src/op-xori.rs" },
    { name = "ps-neg", path = "src/ps-neg.rs" },
    { name = "ps-not", path = "src/ps-not.rs" },
    { name = "ps-sextw", path = "src/ps-sextw.rs" },
    { name = "xx-1", path = "src/xx-1.rs" },
    { name = "xx-2", path = "src/xx-2.rs" },
    { name = "xx-3", path = "src/xx-3.rs" },
]

[package]
name = "kartoffels-vm-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
spin = { workspace = true }
talc = { workspace = true }
kartoffel = { path = "../kartoffel" }
